--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 
 <body>
     <!-- Theme Switcher -->
-    <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
-            <div class="slider round"></div>
+    <div class="sadsad">
+        <label class="asdasd" for="dkjgdr">
+            <input type="checasdsadkbox" id="asdsad" />
+            <div class="asdsadd"></div>
         </label>
     </div>
 
