--- a/index.html
+++ b/index.html
@@ -445,6 +445,9 @@
     <a href="https://nintendoboi222.github.io/games/random-r6-op" target="_blank" >
         <div class="game-link">Random R6 Op</div>
     </a>
+    <a href="https://nintendoboi222.github.io/games/REAL-FS" target="_blank" >
+        <div class="game-link">Real Flight Simulator</div>
+    </a>
     <a href="https://nintendoboi222.github.io/games/retro-bowl" target="_blank" >
         <div class="game-link">Retro Bowl</div>
     </a>
@@ -493,8 +496,14 @@
     <a href="https://nintendoboi222.github.io/games/space-company" target="_blank" >
         <div class="game-link">Space Company</div>
     </a>
+    <a href="https://nintendoboi222.github.io/games/SD" target="_blank" >
+        <div class="game-link">Stickman Destruction</div>
+    </a>
     <a href="https://nintendoboi222.github.io/games/stickman-hook" target="_blank" >
         <div class="game-link">Stickman Hook</div>
+    </a>
+    <a href="https://nintendoboi222.github.io/games/SRP" target="_blank" >
+        <div class="game-link">Stickman Ragdoll Playground</div>
     </a>
     <a href="https://nintendoboi222.github.io/games/superhot" target="_blank" >
         <div class="game-link">Superhot</div>
