--- a/index.html
+++ b/index.html
@@ -114,6 +114,27 @@
         left: 20px;
         z-index: 999;
     }
+    .game-link {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.pin-button {
+    cursor: pointer;
+    margin-right: 10px;
+    opacity: 0.5;
+    transition: opacity 0.2s;
+}
+
+.pin-button.pinned {
+    opacity: 1;
+    color: #ffd700;
+}
+
+.game-title {
+    flex: 1;
+}
   </style>
 
   <meta charset="UTF-8">
