--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="Index-Container">
             <div>
                 <h1 onclick="splashText()" class="Index-SplashText">Enable Javascript Goofy</h1>
+                <h3>DND is working on the pin/star stuff. i hope at least</h3>
             </div>
         </div>
     </strong>
