--- a/index.html
+++ b/index.html
@@ -946,5 +946,6 @@
 <script src="/JS/Search.js"></script>
 <script src="/JS/timethingie.js"></script>
 <script src="/JS/titlestuff.js"></script>
+<script src="/JS/pin-system.js"></script>
 </body>
 </html>
