--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         <div class="Index-Container">
             <div>
                 <h1 onclick="splashText()" class="Index-SplashText">Enable Javascript Goofy</h1>
-                <h3>DND is working on the pin/star stuff. i hope at least</h3>
             </div>
         </div>
     </strong>
@@ -592,7 +591,7 @@
     <a href="https://nintendoboi222.github.io/games/not-a-proxy-trust-me-here" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
-            <span class="game-title">Not a Proxy 😉</span>
+            <span class="game-title">Not a Proxy</span>
         </div>
     </a>
     <a href="https://nintendoboi222.github.io/games/push-your-luck" target="_blank">
