--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="clicks">
         <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fnintendoboi222%2Fnintendoboi222.github.io&count_bg=%23AD00FF&title_bg=%23555555&icon=github.svg&icon_color=%23AD00FF&title=Total+Visits&edge_flat=false"/></a>
-<br><script type="text/javascript" src="JS/hits.js"></script>
+<br><script type="text/javascript" src="/JS/hits.js"></script>
     </div>
       <h3>(Panic Teacher Button, press <kbd>Q</kbd> key)</h3>
     <h1>Welcome</h1>
