--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     </div>
       <div class="inline-elements">
     <h3>(Panic Teacher Button, press <kbd>Q</kbd> key)</h3>    
-    <a class="clicks" href="https://hits.seeyoufarm.com">
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FNintendoboi222%2Fnintendoboi222.github.io" alt="hit-counter">
+    <a class="clicks" href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fnintendoboi222%2Fnintendoboi222.github.io&count_bg=%23AD00FF&title_bg=%23555555&icon=github.svg&icon_color=%23AD00FF&title=Total+Visits&edge_flat=false"/>
     </a>
 </div>
     <h1>Welcome</h1>
