--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button id="reset-color">Reset</button>
     </div>
     <h3>(Panic Teacher Button, press <kbd>Q</kbd> key)</h3>    
-    <a class="thoeswhoknow" href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fnintendoboi222%2Fnintendoboi222.github.io&count_bg=%23AD00FF&title_bg=%23555555&icon=github.svg&icon_color=%23AD00FF&title=Total+Visits&edge_flat=false"/>
+    <a class="thoeswhoknow" href="https://github.com/Nintendoboi222/nintendoboi222.github.io"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fnintendoboi222%2Fnintendoboi222.github.io&count_bg=%23AD00FF&title_bg=%23555555&icon=github.svg&icon_color=%23AD00FF&title=Total+Visits&edge_flat=false"/>
     </a>
     <h1>Welcome</h1>
     <h2>You've been here for <span id="time-counter"></span></h2>
