--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button id="reset-color">Reset</button>
     </div>
     <div style="display: flex; justify-content: space-between; align-items: center;">
-    <h3>(Panic Teacher Button, press <kbd>Q</kbd> key)</h3>
+    <h3 style="position: absolute; left: 50%; transform: translateX(-50%);">(Panic Teacher Button, press <kbd>Q</kbd> key)</h3>
     <a class="thoeswhoknow" href="https://github.com/Nintendoboi222/nintendoboi222.github.io">
         <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fnintendoboi222%2Fnintendoboi222.github.io&count_bg=%23AD00FF&title_bg=%23555555&icon=github.svg&icon_color=%23AD00FF&title=Total+Visits&edge_flat=false"/>
     </a>
