--- a/Request.html
+++ b/Request.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>Private Policy</title>
-    <link rel="icon" type="image/jpg" href="../images/favicon.jpg?v2" />
+    <link rel="icon" type="image/png" href="../images/favicon.png?v2" />
 <link rel="stylesheet" href="/css/style.css"> 
 
   <style>
@@ -41,8 +41,10 @@
   <br><h2 class="links"><a href="https://github.com/mackeylol/copyofmasite" target="_blank"> #4 Capy Games</a></h2>
   <br><h2 class="links">any other games, flash gmaes, mainly HTML files please</h2>
 	<h1><FONT COLOR="#ffffff">Request a game</h1>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLScReJwlA_ev-tzoljQP8tnEVhgM3ydTJ2WALhcsoNoWb33luA/viewform" target="_blank">Google Form</a>
 	      <h3 class="idk"><a href="https://discord.gg/43D6ds9X3P" target="_blank">Discord</h3>
-    <a href="mailto:nintendobi222+addgame@gmail.com?subject=I%20would%20like%20to%20add%20my%20game%20to%20your%20website&body=%3CPlease%20Include%20Game%20Name%2C%20Your%20Name%2FCredits%2C%20and%20The%20Game%20File(s)%3E">Add your own game :)</a>	  
+    <a href="mailto:nintendobi222+addgame@gmail.com?subject=I%20would%20like%20to%20add%20my%20game%20to%20your%20website&body=%3CPlease%20Include%20Game%20Name%2C%20Your%20Name%2FCredits%2C%20and%20The%20Game%20File(s)%3E">Add your own game :)</a>
+		<h6>ONLY IF YOU MADE IT</h6>
 	      <br<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgvd4GnfQ1LLJSSxqifrDwziS9aQ1x2Mle4b956-zAG-uoGw/viewform?embedded=true" width="640" height="1140" frameborder="0" marginheight="0" marginwidth="0"></iframe>
       </center>
     </main>
