--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <a href="https://nintendoboi22.github.io" target="_blank" >
         <div class="game-link-other">To Nintendoboi22</div>
     </a>
+   <a href="https://nintendoboi2222.github.io" target="_blank" >
+        <div class="game-link-other">To Nintendoboi2222</div>
+    </a>
     <div class="game-grid">
        <a href="https://nintendoboi222.github.io/games/awesome-tanks-2" target="_blank">
         <div class="game-link">
