--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
 <script src="/JS/timethingie.js"></script>
 <script src="/JS/titlestuff.js"></script>
 <script src="/JS/pin-system.js"></script>
-<script src="/JS/2222-advertizement.js"></script>
+<script src="/JS/2222-advertisement.js"></script>
 </body>
 </html>
 
