--- a/index.html
+++ b/index.html
@@ -90,11 +90,17 @@
             <span class="pin-button"> </span>
             <span class="game-title">Bit Planes</span>
         </div>
-    </a>
+    </a>    
     <a href="https://nintendoboi222.github.io/games/bitlife" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
             <span class="game-title">Bitlife</span>
+        </div>
+    </a>
+    <a href="https://nintendoboi222.github.io/games/block-blast" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Block Blast</span>
         </div>
     </a>
     <a href="https://nintendoboi222.github.io/games/bloxors" target="_blank">
