--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <input type="text" id="searchBar" onkeyup="searchgames()" placeholder="Search for some games I guess">
     </div>
 
-    <a href="https://nintendoboi22.github.io" target="_blank" >
+  <a href="https://nintendoboi2.github.io" target="_blank" >
+        <div class="game-link-other">To Nintendoboi2</div>
+    </a>  
+  <a href="https://nintendoboi22.github.io" target="_blank" >
         <div class="game-link-other">To Nintendoboi22</div>
     </a>
    <a href="https://nintendoboi2222.github.io" target="_blank" >
