--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
             <span class="game-title">Craft Mine</span>
         </div>
     </a>
+    <a class="game-type skill pve" href="https://nintendoboi222.github.io/games/crazy-cattle-3d">
+         <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Crazy Cattle 3D</span>
+        </div>
+    </a>
     <a href="https://nintendoboi222.github.io/games/crossy-road" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
